--- a/Analyzing_AB_test.ipynb
+++ b/Analyzing_AB_test.ipynb
@@ -41,7 +41,7 @@
     "## Pipeline\n",
     "* Understanding the Data\n",
     "* Normality Test\n",
-    "* Remove Outliers\n",
+    "* Removing Outliers\n",
     "* Testing `retention_1`\n",
     "* Testing `retention_7`\n",
     "* Testing `sum_gamerounds`\n",
